tests/invalid/trait/method_call_short_ufcs_generic_enum_payload_receiver_safety_gate.facet
enum Job<T> {
  Ready(unrestricted T)
}

trait Runner {
  fn run(self: Self) -> ();
}

impl Runner for unrestricted Job<unrestricted isize> {
  fn run(self: Self) -> () {
    ()
  }
}

fn main() -> unrestricted () {
  (Runner::run Job<unrestricted isize>::Ready(1))
}
